--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git pull origin main: pulls the main current main branch into the local environment</li>
-          <<li>git push origin branch-name: pushes local changes to the branch</li>
-          <li>git add -A: commits all files in the working branch</li>
-          <li>git commit: commits changes to repo</li>
+          <li>git pull origin main: syncs local branch with main branch in repo.</li>
+          <li>git push origin branch-name: pushes local changes to the branch.</li>
+          <li>git add -A: commits all files in the working branch.</li>
+          <li>git commit: commits changes to repo.</li>
         </ul>
       </section>
    
