--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -20,13 +21,21 @@
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
           <li>The footer element appears at the bottom of the page and usually contains information about the page.</li>
+          <li><a href="https://www.w3schools.com/tags/">List of HTML tags</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web Docs on HTML</a></li>
         </ul>
       </section>
 
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Inline styles apply only to a specific HTML tag</li>
+          <li>an internal style sheet contains CSS rules for the webpage in the head section</li>
+          <li>external style sheet keeps all the CSS rules in a separate file</li>
+          <li>a class selector is preceded by a period and applies to html elements with that class</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">MDN Web Docs on CSS</a></li>
         </ul>
       </section>
    
