--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">MDN Web Docs on JavaScript basics</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">MDN Web Docs on JavaScript data types</a></li>
+          <li>An array is a single variable that is used to hold a group of data</li>
+          <li>A function is a set of instructions that tells the computer how to perform a certain task</li>
         </ul>
       </section>
     </main>
